--- a/styles.css
+++ b/styles.css
@@ -15,6 +15,17 @@ h2 {
 }
 
 img {
-    max-width: 400px;
+    max-width: 300px;
     max-height: auto;
+}
+
+.score-container {
+    margin: 1em;
+    font-size: 32px;
+    text-align: center;
+}
+
+.scoreText {
+    font-weight: bold;
+    font-size: 24px;
 }
